Update URL to use HTTPS for index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 local aa = require('android_auto')
 local ui = require('ui')
-local url = 'http://192.168.1.112:8080/index.html'
+local url = 'https://zaramagasoft.github.io/index.html'
 local loaded = false
 
 function aa.onShow()
