--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
-local aa = require('android_auto')
-local ui = require('ui')
-local url = 'https://zaramagasoft.github.io/index.html'
-local loaded = false
-
-function aa.onShow()
-  loaded = false
-end
-
-function aa.draw(dt)
-  ui.text('🎬 Video Player Local')
-  if not loaded then
-    loaded = true
-    ac.delay(function()
-      aa.web.load(url)
-    end, 0.5)
-  end
-end
+<html>
+  <body style="margin:0;background:black;display:flex;justify-content:center;align-items:center;height:100vh;">
+    <video width="100%" height="100%" controls autoplay playsinline>
+      <source src="video1.mp4" type="video/mp4">
+    </video>
+  </body>
+</html>
