--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <body style="margin:0;background:black;display:flex;justify-content:center;align-items:center;height:100vh;">
-    <video width="100%" height="100%" controls autoplay playsinline>
-      <source src="video1.mp4" type="video/mp4">
+   <video width="100%" height="100%" controls autoplay playsinline muted style="background:#000">
+    <source src="https://zaramagasoft.github.io/video1.mp4" type="video/mp4">
+  Tu navegador no soporta el tag de video.
     </video>
+
   </body>
 </html>
